--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link href="style.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <main>
             <section>
-                <div id="display">
-                <img id="choice1">
-                <img id="choice2">
-                <img id="choice3">
-                </div>
+                <h1> Select your Favorite </h1>
+                    <div id="display">
+                    <img id="choice1">
+                    <img id="choice2">
+                    <img id="choice3">
+                    </div>
             </section>
             
         </main>
