--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
                     <img id="choice3">
                     </div>
             </section>
+            <canvas id="mallChart" height="300" width="300">
             
+            </canvas>
         </main>
-        <script src="app2.js"></script>
+        <script src="app.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.js"></script>
+        <!--<script src="mallChart.js"></script> -->
     </body>
 </html>
