added picture display function to app2, removed it from gitignore

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
             <section>
                 <h1> Select your Favorite </h1>
                     <div id="display">
-                    <img id="choice1">
-                    <img id="choice2">
-                    <img id="choice3">
+                        <img id="choice1">
+                        <img id="choice2">
+                        <img id="choice3">
                     </div>
             </section>
-            <canvas id="mallChart" height="300" width="300">
+           <!-- <canvas id="mallChart" height="300" width="300"> -->
             
             </canvas>
         </main>
-        <script src="app.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.js"></script>
+        <script src="app2.js"></script>
+        <!-- this one is the good<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.js"></script> -->
         <!--<script src="mallChart.js"></script> -->
     </body>
 </html>
