--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
             <section>
                 <h1> Select your Favorite </h1>
                     <div id="display">
-                        <img id="choice1">
-                        <img id="choice2">
-                        <img id="choice3">
+                        <img class="classP">
+                        <img class="classP">
+                        <img class="classP">
                     </div>
             </section>
            <!-- <canvas id="mallChart" height="300" width="300"> -->
