--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
                         <img class="classP">
                     </div>
             </section>
-           <!-- <canvas id="mallChart" height="300" width="300"> -->
+           <canvas id="mallChart" height="300" width="300">
             
             </canvas>
         </main>
         <script src="app2.js"></script>
-        <!-- this one is the good<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.js"></script> -->
-        <!--<script src="mallChart.js"></script> -->
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.js"></script>
+        
     </body>
 </html>
